// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContextSelector Renders ContextSelector 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-c-context-selector"
    data-ouia-component-id="OUIA-Generated-ContextSelector-1"
    data-ouia-component-type="PF5/ContextSelector"
    data-ouia-safe="true"
  >
    <button
      aria-expanded="false"
      aria-labelledby="pf-v5-context-selector-label-id-render pf-v5-context-selector-toggle-id-render"
      class="pf-v5-c-context-selector__toggle"
      id="pf-v5-context-selector-toggle-id-render"
      type="button"
    >
      <span
        class="pf-v5-c-context-selector__toggle-text"
      />
      <span
        class="pf-v5-c-context-selector__toggle-icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v5-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 320 512"
          width="1em"
        >
          <path
            d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
          />
        </svg>
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`ContextSelector Renders ContextSelector open 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-c-context-selector pf-m-expanded"
    data-ouia-component-id="OUIA-Generated-ContextSelector-2"
    data-ouia-component-type="PF5/ContextSelector"
    data-ouia-safe="true"
  >
    <button
      aria-expanded="true"
      aria-labelledby="pf-v5-context-selector-label-id-render-open pf-v5-context-selector-toggle-id-render-open"
      class="pf-v5-c-context-selector__toggle"
      id="pf-v5-context-selector-toggle-id-render-open"
      type="button"
    >
      <span
        class="pf-v5-c-context-selector__toggle-text"
      />
      <span
        class="pf-v5-c-context-selector__toggle-icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v5-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 320 512"
          width="1em"
        >
          <path
            d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
          />
        </svg>
      </span>
    </button>
    <div
      class="pf-v5-c-context-selector__menu"
      id="render-open"
    >
      <div>
        <div
          class="pf-v5-c-context-selector__menu-search"
        >
          <div
            class="pf-v5-c-input-group"
          >
            <div
              class="pf-v5-c-input-group__item pf-m-fill"
            >
              <div
                class="pf-v5-c-text-input-group"
              >
                <div
                  class="pf-v5-c-text-input-group__main pf-m-icon"
                >
                  <span
                    class="pf-v5-c-text-input-group__text"
                  >
                    <span
                      class="pf-v5-c-text-input-group__icon"
                    >
                      <svg
                        aria-hidden="true"
                        class="pf-v5-svg"
                        fill="currentColor"
                        height="1em"
                        role="img"
                        viewBox="0 0 512 512"
                        width="1em"
                      >
                        <path
                          d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                        />
                      </svg>
                    </span>
                    <input
                      aria-label="Search input"
                      class="pf-v5-c-text-input-group__text-input"
                      placeholder="Search"
                      type="text"
                      value=""
                    />
                  </span>
                </div>
              </div>
            </div>
            <div
              class="pf-v5-c-input-group__item"
            >
              <button
                aria-disabled="false"
                aria-label="Search menu items"
                class="pf-v5-c-button pf-m-control"
                data-ouia-component-id="OUIA-Generated-Button-control-1"
                data-ouia-component-type="PF5/Button"
                data-ouia-safe="true"
                type="submit"
              >
                <span
                  class="pf-v5-c-icon"
                >
                  <span
                    class="pf-v5-c-icon__content pf-v5-m-mirror-inline-rtl"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-v5-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      viewBox="0 0 448 512"
                      width="1em"
                    >
                      <path
                        d="M190.5 66.9l22.2-22.2c9.4-9.4 24.6-9.4 33.9 0L441 239c9.4 9.4 9.4 24.6 0 33.9L246.6 467.3c-9.4 9.4-24.6 9.4-33.9 0l-22.2-22.2c-9.5-9.5-9.3-25 .4-34.3L311.4 296H24c-13.3 0-24-10.7-24-24v-32c0-13.3 10.7-24 24-24h287.4L190.9 101.2c-9.8-9.3-10-24.8-.4-34.3z"
                      />
                    </svg>
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
        <ul
          class="pf-v5-c-context-selector__menu-list"
          role="menu"
        >
          <li
            role="none"
          >
            <button
              class="pf-v5-c-context-selector__menu-list-item"
              role="menuitem"
            >
              My Project
            </button>
          </li>
          <li
            role="none"
          >
            <button
              class="pf-v5-c-context-selector__menu-list-item"
              role="menuitem"
            >
              OpenShift Cluster
            </button>
          </li>
          <li
            role="none"
          >
            <button
              class="pf-v5-c-context-selector__menu-list-item"
              role="menuitem"
            >
              Production Ansible
            </button>
          </li>
          <li
            role="none"
          >
            <button
              class="pf-v5-c-context-selector__menu-list-item"
              role="menuitem"
            >
              AWS
            </button>
          </li>
          <li
            role="none"
          >
            <button
              class="pf-v5-c-context-selector__menu-list-item"
              role="menuitem"
            >
              Azure
            </button>
          </li>
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ContextSelector Renders in strict mode 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-c-context-selector pf-m-expanded"
    data-ouia-component-id="OUIA-Generated-ContextSelector-4"
    data-ouia-component-type="PF5/ContextSelector"
    data-ouia-safe="true"
  >
    <button
      aria-expanded="true"
      aria-labelledby="pf-v5-context-selector-label-id-render pf-v5-context-selector-toggle-id-render"
      class="pf-v5-c-context-selector__toggle"
      id="pf-v5-context-selector-toggle-id-render"
      type="button"
    >
      <span
        class="pf-v5-c-context-selector__toggle-text"
      />
      <span
        class="pf-v5-c-context-selector__toggle-icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v5-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 320 512"
          width="1em"
        >
          <path
            d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
          />
        </svg>
      </span>
    </button>
    <div
      class="pf-v5-c-context-selector__menu"
      id="render"
    >
      <div>
        <div
          class="pf-v5-c-context-selector__menu-search"
        >
          <div
            class="pf-v5-c-input-group"
          >
            <div
              class="pf-v5-c-input-group__item pf-m-fill"
            >
              <div
                class="pf-v5-c-text-input-group"
              >
                <div
                  class="pf-v5-c-text-input-group__main pf-m-icon"
                >
                  <span
                    class="pf-v5-c-text-input-group__text"
                  >
                    <span
                      class="pf-v5-c-text-input-group__icon"
                    >
                      <svg
                        aria-hidden="true"
                        class="pf-v5-svg"
                        fill="currentColor"
                        height="1em"
                        role="img"
                        viewBox="0 0 512 512"
                        width="1em"
                      >
                        <path
                          d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                        />
                      </svg>
                    </span>
                    <input
                      aria-label="Search input"
                      class="pf-v5-c-text-input-group__text-input"
                      placeholder="Search"
                      type="text"
                      value=""
                    />
                  </span>
                </div>
              </div>
            </div>
            <div
              class="pf-v5-c-input-group__item"
            >
              <button
                aria-disabled="false"
                aria-label="Search menu items"
                class="pf-v5-c-button pf-m-control"
                data-ouia-component-id="OUIA-Generated-Button-control-3"
                data-ouia-component-type="PF5/Button"
                data-ouia-safe="true"
                type="submit"
              >
                <span
                  class="pf-v5-c-icon"
                >
                  <span
                    class="pf-v5-c-icon__content pf-v5-m-mirror-inline-rtl"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-v5-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      viewBox="0 0 448 512"
                      width="1em"
                    >
                      <path
                        d="M190.5 66.9l22.2-22.2c9.4-9.4 24.6-9.4 33.9 0L441 239c9.4 9.4 9.4 24.6 0 33.9L246.6 467.3c-9.4 9.4-24.6 9.4-33.9 0l-22.2-22.2c-9.5-9.5-9.3-25 .4-34.3L311.4 296H24c-13.3 0-24-10.7-24-24v-32c0-13.3 10.7-24 24-24h287.4L190.9 101.2c-9.8-9.3-10-24.8-.4-34.3z"
                      />
                    </svg>
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
        <ul
          class="pf-v5-c-context-selector__menu-list"
          role="menu"
        >
          <li
            role="none"
          >
            <button
              class="pf-v5-c-context-selector__menu-list-item"
              role="menuitem"
            >
              My Project
            </button>
          </li>
          <li
            role="none"
          >
            <button
              class="pf-v5-c-context-selector__menu-list-item"
              role="menuitem"
            >
              OpenShift Cluster
            </button>
          </li>
          <li
            role="none"
          >
            <button
              class="pf-v5-c-context-selector__menu-list-item"
              role="menuitem"
            >
              Production Ansible
            </button>
          </li>
          <li
            role="none"
          >
            <button
              class="pf-v5-c-context-selector__menu-list-item"
              role="menuitem"
            >
              AWS
            </button>
          </li>
          <li
            role="none"
          >
            <button
              class="pf-v5-c-context-selector__menu-list-item"
              role="menuitem"
            >
              Azure
            </button>
          </li>
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
